reset browser built-in settings to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* Ensures padding doesn't affect overall width */
+}
+
 /* Define Color Scheme */
 /* Moon Phases Inspired Color Scheme */
 /* Sirin Labs Inspired Color Scheme */
@@ -72,6 +79,7 @@ nav .social-icons a {
     margin: 0 20px;
     color: white;
     font-size: 1.2rem;
+    display:inline-block
 }
 
 
@@ -120,7 +128,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
         left: 0;
         width: 100%;
         height: 100vh;
-        background-color: rgba(0, 0, 0, 0.2); /* Semi-transparent black background */
+        background-color: rgba(0, 0, 0, 0.85); /* Semi-transparent black background */
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -128,14 +136,14 @@ nav .social-icons a:hover, nav .social-icons a:focus {
         transform: translateY(-100%);
         transition: transform 0.3s ease-in-out;
     }
-
+    
     nav .mainMenu.expanded {
         display: flex;
         flex-direction: column;
         width: 100%;
         transform: translateY(0);
         position: absolute;
-        top: 60px; /* Height of the nav bar */
+        top: 20px; /* Height of the nav bar */
         left: 0;
         background: rgba(0, 0, 0, 0.9);
     }
